<resources>
    <string name="app_name">Cultivate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="room_test_global">Global Test Room</string>
    <string name="content">Lastest Message</string>

    <!-- Register Fragment Names -->>
    <string name="cap_register">Create New Account</string>
    <string name="hint_nick">Nick Name</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_register">REGISTER</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="pw_req">Password requirements:
        \n- at least 8 characters
        \n- at least one uppercase letter
        \n- at least one lowercase letter
        \n- at least one digit
        \n- at least one special character
        \n(@#$%&amp;*!?)
        </string>

    <!-- Sign in Fragment Names -->>
    <string name="action_login">SIGN IN</string>
    <string name="action_signup">SIGN UP</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="remember_me">Remember me</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>

    <!-- Registration - Email Verification Fragment Names -->
    <string name="hint_account_creation">
        Thank you for creating the account!
        Please check your email to verify your account.
    </string>
    <string name="email_verification_completed">Back to Sign In</string>

    <!-- Password Reset - Email Verification Fragment Names -->>
    <string name="hint_password_reset">
        Please check your email to verify your account.
        After that, set your new password on the next screen.
    </string>
    <string name="continue_to_reset">I verified my email</string>

    <!-- Password Reset - Input New Password -->
    <string name="hint_new_password">New password</string>

    <!-- Contact -->
    <string name="title_accepted_member">Selected contact(s):</string>
    <string name="hint_search_people">first/nickname</string>
    <string name="title_search_people">Contacts</string>
    <string name="title_request_received">Contact Requests</string>
    <string name="button_add_friend_search">Search</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_decline">Decline</string>
    <string name="title_add_people_to_chat">To: </string>
    <string name="hint_chat_name">Chat Name</string>
    <string name="button_create_chat">Create</string>
    <string name="title_full_name">Full name</string>
    <string name="title_contact_name">Contact name</string>
    <string name="title_send_requests">Send Contact Request?</string>
    <string name="title_remove_friends">Remove Contact?</string>
    <string name="title_accept_requests">Accept Contact Request?</string>

    <!-- Settings Page -->
    <string name="change_nickname"><u>Change nickname</u></string>
    <string name="change_password"><u>Change password</u></string>
    <string name="change_picture"><u>Change profile picture</u> (I don\'t work)</string>
    <string name="color_theme">Color Theme:</string>
    <string name="defaultTheme">Default</string>
    <string name="alternateTheme">Alternate</string>
    <string name="temp_unit">Temp Unit:</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>

    <!-- Nickname and Password Dialogues -->
    <string name="new_nickname">New nickname</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype password</string>

    <!-- Dropdown Menu -->
    <string name="dropdown_settings">Settings</string>
    <string name="dropdown_about_us">About us</string>
    <string name="dropdown_logout">Logout</string>

    <!-- Bottom Navigation Bar Text -->>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_account">Account</string>

    <!-- urls-->>
    <string name="base_url">https://cultivate-app-web-service.herokuapp.com/</string>
    <string name="room_url">https://cultivate-app-web-service.herokuapp.com/room/</string>
    <string name="room_url_update">https://cultivate-app-web-service.herokuapp.com/room/update</string>
    <string name="chosen_get_url">https://cultivate-app-web-service.herokuapp.com/group/</string>
    <string name="chosen_delete_url">https://cultivate-app-web-service.herokuapp.com/group/delete/</string>
    <!-- weather -->
    <string name="current_weather_temp_text_view"> </string>

    <!-- About us -->
    <string name="about_us">Wow, this page is amazing. \nIt is also completely useless.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_location" />
</resources>