<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/more"
        android:title=""
        android:icon="@drawable/dropdown"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/settingsFragment"
                android:title="@string/dropdown_settings"
                android:icon="@drawable/dropdown_settings"
                app:showAsAction="ifRoom" />

            <item android:id="@+id/aboutUsFragment"
                android:title="@string/dropdown_about_us"
                android:icon="@drawable/dropdown_about_us"
                app:showAsAction="ifRoom"/>

            <item android:id="@+id/logout_button"
                android:title="@string/dropdown_logout"
                android:icon="@drawable/dropdown_logout"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>